Bài 25 (phần còn lại)